Added CSS file updated home page Placeholder logo

--- a/index.html
+++ b/index.html
@@ -2,10 +2,34 @@
 <head lang = "en">
 	<meta charset = "utf-8" />
 	<title>Daniel Martin</title>
+    <link rel="stylesheet" type="text/css" href="css.css">
+    <link href='https://fonts.googleapis.com/css?family=Average+Sans' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Signika' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Droid+Sans' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Hind' rel='stylesheet' type='text/css'>
 </head>
 <body>
+	
+	<header>
+		<span id = "headerContent">
+			<nav>
+				<a href="#">PROJECTS</a>
+				<a href="#">RESUME</a>
+				<a href="#">ABOUT ME</a>
+			</nav>
+		</span>
+	</header>
+
 	<!--Main Splash-->
-	<section>
+	<section id = "mainSplash">
+		<div class = "contentContainer">
+			<div id = "splashLogo">
+				<img src="media/TestLogo.png" alt="logo" height="125" width="125" id = "mainLogo">
+			</div>
+			<div id = "headerName">
+				Daniel Martin | Front-end Developer + UI/UX Designer
+			</div>
+		</div>
 		
 	</section>
 	<!--Project spread-->
