-added hovering for links -centered links in top nav -cleaned up css/naming conventions -added framework for main content

--- a/index.html
+++ b/index.html
@@ -5,24 +5,23 @@
     <link rel="stylesheet" type="text/css" href="css.css">
     <link href='https://fonts.googleapis.com/css?family=Average+Sans' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Signika' rel='stylesheet' type='text/css'>
-    <link href='https://fonts.googleapis.com/css?family=Droid+Sans' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Hind' rel='stylesheet' type='text/css'>
 </head>
 <body>
 	
 	<header>
-		<span id = "headerContent">
+		<div id = "headerContent">
 			<nav>
 				<a href="#">PROJECTS</a>
-				<a href="#">RESUME</a>
+				<a href="resume.pdf" target="_blank">RESUME</a>
 				<a href="#">ABOUT ME</a>
 			</nav>
-		</span>
+		</div>
 	</header>
 
 	<!--Main Splash-->
 	<section id = "mainSplash">
-		<div class = "contentContainer">
+		<div class = "headerWrapper">
 			<div id = "splashLogo">
 				<img src="media/TestLogo.png" alt="logo" height="125" width="125" id = "mainLogo">
 			</div>
@@ -30,11 +29,16 @@
 				Daniel Martin | Front-end Developer + UI/UX Designer
 			</div>
 		</div>
-		
 	</section>
-	<!--Project spread-->
-	<section>
 
+	<!--Main spread-->
+	<section  class = "contentWrapper">
+		<article>
+			<h1>About Me</h1>
+			<h1>Project 1</h1>
+			<h1>Project 2</h1>
+			<h1>Project 3</h1>
+		</article>
 	</section>
 	<footer>
 		<span>email | phone</span>
