--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<div id = "headerContent">
 			<nav>
 				<a href="#">PROJECTS</a>
-				<a href="resume.pdf" target="_blank">RESUME</a>
+				<a href="media/Resume.pdf" target="_blank">RESUME</a>
 				<a href="#">ABOUT ME</a>
 			</nav>
 		</div>
@@ -27,11 +27,14 @@
 			</div>
 			<div id = "headerName">
 				Daniel Martin | Front-end Developer + UI/UX Designer
+				<br>
+				<br>
+				Site currently under maintenance. If you have any questions you can contact me at dcm5659@rit.edu or check my resume. Sorry for any inconvenience!
 			</div>
 		</div>
 	</section>
 
-	<!--Main spread-->
+	<!--Main spread
 	<section  class = "contentWrapper">
 		<article>
 			<h1>About Me</h1>
@@ -39,7 +42,7 @@
 			<h1>Project 2</h1>
 			<h1>Project 3</h1>
 		</article>
-	</section>
+	</section>-->
 	<footer>
 		<span>email | phone</span>
 		<span>&copy; Copyright</span>
