Full update all pages Removed extreneous files

--- a/home.html
+++ b/home.html
@@ -20,33 +20,89 @@
 	</div>
 	<div id = "work">
 		<section class = "leftCol">
-			<article class = "projectEntry projectEntryLeft" id = "nmtp">
-				<a href="http://ritsmiles.com"><img src="media/smiles_logoSQ.jpg" alt = "Smiles Per Hour Logo" width = "380" height = "380" id = "smiles"></a>
-			</article>
-			<article class = "projectEntry projectEntryLeft" >
-				<a href="">
-					<img src="media/apiSQ.png" alt = "API Screenshot" width = "380" height = "380" id = "pcpart">
+			<article class = "projectlink">
+			<div class="slidecontainer">
+				<a href="projects/smilespg.html">
+					<img src="media/smiles_logoSQ.jpg" alt="Avatar" class="slideimage">
+			    	<div class="overlay">
+			    		<div class="text">
+			    			<h1>Smiles Per Hour</h1>
+			    			Large scale team project
+			    			<br>
+			    			(Web and App Development)
+			    		</div>
+			  		</div>
 				</a>
+			</div>
 			</article>
-			<article class = "projectEntry projectEntryLeft" >
+
+			<article class = "projectlink">
+			<div class="slidecontainer">
+				<a href="projects/smilespg.html">
+					<img src="media/apiSQ.png" alt = "API Screenshot" id = "pcpart" class="slideimage">
+			    	<div class="overlay">
+			    		<div class="text">
+			    			<h1>Smiles Per Hour</h1>
+			    			Large scale team project
+			    			<br>
+			    			(Web and App Development)
+			    		</div>
+			  		</div>
+				</a>
+			</div>
+			</article>
+
+			<article class = "projectlink">
+			<div class="slidecontainer">
 				<a href="projects/crashtacticspg.html">
-					<img src="media/crashtacticsSQ.jpg" alt = "Crash Tactics" width = "380" height = "380">
+					<img src="media/crashtacticsSQ.jpg" alt = "Crash Tactics" id = "pcpart" class="slideimage">
+			    	<div class="overlay">
+			    		<div class="text">
+			    			<h1>Smiles Per Hour</h1>
+			    			Large scale team project
+			    			<br>
+			    			(Web and App Development)
+			    		</div>
+			  		</div>
 				</a>
+			</div>
 			</article>
 		</section>
+
 		<section class = "rightCol">
-			<article class = "projectEntry projectEntryRight">
+			<article class = "projectlink">
+			<div class="slidecontainer">
 				<a href="projects/snowballinpg.html">
-					<img src="media/snowballinSQ.png" alt = "Snowballin' Screenshot" width = "380" height = "380">
+					<img src="media/snowballinSQ.png" alt = "Snowballin' Screenshot" class="slideimage">
+			    	<div class="overlay">
+			    		<div class="text">
+			    			<h1>Smiles Per Hour</h1>
+			    			Large scale team project
+			    			<br>
+			    			(Web and App Development)
+			    		</div>
+			  		</div>
 				</a>
+			</div>
 			</article>
-			<article class = "projectEntry projectEntryRight">
+
+			<article class = "projectlink">
+			<div class="slidecontainer">
 				<a href="projects/magnetspg.html">
-					<img src="media/poetry-launch.png" alt = "Magnetic poetry app Screenshot" width = "272" height = "380">
+					<img src="media/poetry-launch.png" alt = "Magnetic poetry app Screenshot" class="slideimage">
+			    	<div class="overlay">
+			    		<div class="text">
+			    			<h1>Smiles Per Hour</h1>
+			    			Large scale team project
+			    			<br>
+			    			(Web and App Development)
+			    		</div>
+			  		</div>
 				</a>
+			</div>
 			</article>
-			
 		</section>
+
 	</div>
 	<footer>
 		<span class = "spanentry">danmartindev@gmail.com</span>
