--- a/projects/crashtacticspg.html
+++ b/projects/crashtacticspg.html
@@ -18,14 +18,30 @@
 			<a href="../media/Martin_ResumeV4.pdf" target = "_blank">Resume</a>
 		</nav>	
 	</div>
+
 	<div class = "projectpage">
-		<img src="../media/crashtactics.jpg" width = "905" height = "592">
-		<ul>
-			<li>Group Members: 3</li>
-			<li>Skills Gained/Lessons: Game Design, Team collaboration</li>
-		</ul>
-		<p>Crash Tactics is a board game based on movement and resource management. The player gains speed(movement) and mass(hitpoints) by orbiting the corresponding blue and red planets. They then ram into other players removing their mass until it hits 0.</p>
-		<a href="https://docs.google.com/document/d/1OgMvdYUieK-sMZdqIhMb_R26OcjfPAU3BEBGwXt69Qc/">Full Design Doc</a>
+		<div class = "imgcontainer">
+			<img class = "wideimg" src="../media/crashtactics.jpg" alt = "Crash Tactics Game Board">
+		</div>
+		<div class = "projectinfo">
+			<h1>Crash Tactics</h1>
+			<h3>Project Info</h3>
+			<ul>
+				<li>- Group Members: 3</li>
+				<li>- Completion time: 2 months</li>
+			</ul>
+			<h3>Project Description</h3>
+			<p>Crash Tactics is a board game based on movement and resource management. The player gains speed(movement and damage) and mass(hitpoints) by orbiting the corresponding blue and red planets. They then ram into other players removing their mass until it hits 0.</p>
+			<h3>Contributions</h3>
+
+			<h3>Skills used/Lessons Learned</h3>
+			<ul>
+				<li>- Game design</li>
+				<li>- Iterating on designs</li>
+				<li>- Team collaboration</li>
+			</ul>
+			<a class = "btn" href="https://docs.google.com/document/d/1OgMvdYUieK-sMZdqIhMb_R26OcjfPAU3BEBGwXt69Qc/">Full Design Doc</a>
+		</div>	
 	</div>
 	<footer>
 		<span class = "spanentry">danmartindev@gmail.com</span>
