--- a/projects/pickerpg.html
+++ b/projects/pickerpg.html
@@ -24,7 +24,7 @@
 		</div>
 		</div>
 			<div class = "projectinfo">
-				<h1>Snowballin'</h1>
+				<h1>PC Part Picker</h1>
 				<h3>Project Info</h3>
 				<ul>
 					<li>- Group Members: 2</li>
