--- a/projects/snowballinpg.html
+++ b/projects/snowballinpg.html
@@ -19,13 +19,33 @@
 		</nav>	
 	</div>
 	<div class = "projectpage">
-		<img src="../media/snowballin1.png" width = "905" height = "592">
-		<ul>
-			<li>Group Members: 3</li>
-			<li>Skills/Tools used: Unity, C#</li>
-		</ul>
-		<p>Snowballin' is a casual game built in Unity. It plays similar to Katamari Damacy as the player rolls around picking up items with the ball. The game has two modes: time attack, where the player fights against melting by picking up items, and adventure mode, where they can explore the map trying to get the best score.</p>
-		<a href="https://github.com/dcm5659/CasualGame2">Source Code</a>
+		<div class = "imgcontainer">
+			<img class = "wideimg" src="../media/crashtactics.jpg" alt = "Crash Tactics Game Board">
+		</div>
+		<div class = "projectinfo">
+			<h1>Snowballin'</h1>
+			<h3>Project Info</h3>
+			<ul>
+				<li>- Group Members: 3</li>
+				<li>- Skills/Tools used: Unity, C#</li>
+			</ul>
+			<h3>Project Description</h3>
+			<p>Snowballin' is a casual game built in Unity. It plays similar to Katamari Damacy as the player rolls around picking up items with the ball. The game has two modes: time attack, where the player fights against melting by picking up items, and adventure mode, where they can explore the map trying to get the best score.</p>
+			<h3>Contributions</h3>
+			<ul>
+				<li>- UI/Menu System</li>
+				<li>- Scoring/Timekeeping mechanics</li>
+				<li>- Helped with movement/item pickup</li>
+				<li>- Prefabs/Development tools</li>
+			</ul>
+			<h3>Skills used/Lessons Learned</h3>
+			<ul>
+				<li>- Unity3D</li>
+				<li>- C#</li>
+				<li>- Team collaboration</li>
+			</ul>
+			<a class = "btn" href="https://github.com/dcm5659/CasualGame2">Source Code</a>
+		</div>	
 	</div>
 	<footer>
 		<span class = "spanentry">danmartindev@gmail.com</span>
