--- a/projects/smilespg.html
+++ b/projects/smilespg.html
@@ -21,31 +21,32 @@
 	<div class = "projectpage">
 		<div class = "imgcontainer">
 			<img class = "wideimg" src="../media/crashtactics.jpg" alt = "Crash Tactics Game Board">
-		</div>
-		</div>
-			<div class = "projectinfo">
-				<h1>Snowballin'</h1>
-				<h3>Project Info</h3>
-				<ul>
-					<li>- Group Members: 2</li>
-				</ul>
-				<h3>Project Description</h3>
-				<p>Poem Fridge is our take on a magnetic poetry app. It allows the user to create their own poetry using an interface similar to magnets on a fridge. There are a number of different word lists and fonts to choose from. The users can then screenshot and share their poems using the share button. They can also edit the background of the app using the load function.</p>
-				<h3>Contributions</h3>
-				<ul>
-					<li>- Text changing systems</li>
-					<li>- </li>
-				</ul>
-				<h3>Skills used/Lessons Learned</h3>
-				<ul>
-					<li>- XCode</li>
-					<li>- Swift</li>
-					<li>- Team collaboration</li>
-				</ul>
-				<a href="https://github.com/bxc1712/PoemMagnets">Source Code</a>
 		</div>	
-	</div>
-	
+		<div class = "projectinfo">
+			<h1>Smiles Per Hour</h1>
+			<h3>Project Info</h3>
+			<ul>
+				<li>- Group Members: 6</li>
+				<li>- Status: In Progress</li>
+			</ul>
+			<h3>Project Description</h3>
+			<p>Poem Fridge is our take on a magnetic poetry app. It allows the user to create their own poetry using an interface similar to magnets on a fridge. There are a number of different word lists and fonts to choose from. The users can then screenshot and share their poems using the share button. They can also edit the background of the app using the load function.</p>
+			<h3>Contributions</h3>
+			<ul>
+				<li>- Full Website Development</li>
+				<li>- Interactive Processing Application(In Progress)</li>
+				<li>- Kiosk Development</li>
+				<li>- Kiosk Location Management</li>
+			</ul>
+			<h3>Skills used/Lessons Learned</h3>
+			<ul>
+				<li>- Arduino Development</li>
+				<li>- Processing</li>
+				<li>- HTML5/CSS</li>
+				<li>- Group collaboration</li>
+			</ul>
+			<a href="http://ritsmiles.com">Development Blog</a>
+		</div>
 	<footer>
 		<span class = "spanentry">danmartindev@gmail.com</span>
 		<span class = "spanentry">
