- Updated CSS - Updated images - Added updated resume - Changed some text

--- a/about.html
+++ b/about.html
@@ -4,22 +4,24 @@
 	<meta charset = "utf-8" />
 	<title>Dan Martin</title>
 	<link rel="stylesheet" type="text/css" href="css/font-awesome/css/font-awesome.min.css">
-	<link rel="stylesheet" type="text/css" href="css/homecss.css">W
+	<link rel="stylesheet" type="text/css" href="css/homecss.css">
 	<link href='https://fonts.googleapis.com/css?family=Hind' rel='stylesheet' type='text/css'>
-	<script src="scripts/jquery.js"></script>
-	<script src = "scripts/myjs.js"></script>
+	<link rel="icon" href="media/martinLogoSmall.png" type="image/gif" sizes="16x16">
+	<!--<script src="scripts/jquery.js"></script> -->
+	<!--<script src = "scripts/myjs.js"></script> -->
 </head>
 <body>
 	<div id = "intro">
 		<h1>Daniel Martin</h1>
 		<nav>
 			<a href="home.html">Work</a>			
-			<a href="about.html">About</a>
-			<a href="media/Martin_ResumeV4.pdf" target = "_blank">Resume</a>
+			<a href="about.html" id = "active">About</a>
+			<a href="media/Martin_ResumeV5.pdf" target = "_blank">Resume</a>
 		</nav>	
 	</div>
-	<div id = "projectpage">
-		<p>Hi! I'm Dan and I'm a front end developer. I mainly focus on game and web development, but also have experience with iOS and other platforms. I also like to work in game design. My hobbies include video and board games, anime, and movies/TV.</p>
+	<div id = "aboutwrapper">
+		<img src="media/CroppedMug500.png" alt="headshot" width="300" height="300">
+		<p>Hi! I'm Dan and I'm a front end developer. I mainly focus on web and game development, but have experience with other platforms such as iOS. I also like to work in game design. My hobbies include board and video games, anime, and movies/TV.</p>
 	</div>
 	<footer>
 		<span class = "spanentry">danmartindev@gmail.com</span>
