--- a/home.html
+++ b/home.html
@@ -6,16 +6,17 @@
 	<link rel="stylesheet" type="text/css" href="css/font-awesome/css/font-awesome.min.css">
 	<link rel="stylesheet" type="text/css" href="css/homecss.css">
 	<link href='https://fonts.googleapis.com/css?family=Hind' rel='stylesheet' type='text/css'>
-	<script src="scripts/jquery.js"></script>
-	<script src = "scripts/myjs.js"></script>
+	<link rel="icon" href="media/martinLogoSmall.png" type="image/gif" sizes="16x16">
+	<!--<script src="scripts/jquery.js"></script> -->
+	<!--<script src = "scripts/myjs.js"></script> -->
 </head>
 <body>
 	<div id = "intro">
 		<h1>Daniel Martin</h1>
 		<nav>
-			<a href="#">Work</a>			
+			<a href="#" id = "active">Work</a>			
 			<a href="about.html">About</a>
-			<a href="media/Martin_ResumeV4.pdf" target = "_blank">Resume</a>
+			<a href="media/Martin_ResumeV5.pdf" target = "_blank">Resume</a>
 		</nav>	
 	</div>
 	<div id = "work">
@@ -29,7 +30,7 @@
 			    			<h1>Smiles Per Hour</h1>
 			    			Large scale team project
 			    			<br>
-			    			(Web and App Development)
+			    			Web and App Development
 			    		</div>
 			  		</div>
 				</a>
@@ -38,14 +39,14 @@
 
 			<article class = "projectlink">
 			<div class="slidecontainer">
-				<a href="projects/smilespg.html">
+				<a href="projects/pickerpg.html">
 					<img src="media/apiSQ.png" alt = "API Screenshot" id = "pcpart" class="slideimage">
 			    	<div class="overlay">
 			    		<div class="text">
-			    			<h1>Smiles Per Hour</h1>
-			    			Large scale team project
+			    			<h1>PC Part Picker</h1>
+			    			Solo Web Project
 			    			<br>
-			    			(Web and App Development)
+			    			HTML5 Canvas, Web Services
 			    		</div>
 			  		</div>
 				</a>
@@ -55,13 +56,13 @@
 			<article class = "projectlink">
 			<div class="slidecontainer">
 				<a href="projects/crashtacticspg.html">
-					<img src="media/crashtacticsSQ.jpg" alt = "Crash Tactics" id = "pcpart" class="slideimage">
+					<img src="media/crashtacticsSQ.jpg" alt = "Crash Tactics" class="slideimage">
 			    	<div class="overlay">
 			    		<div class="text">
-			    			<h1>Smiles Per Hour</h1>
-			    			Large scale team project
+			    			<h1>Crash Tactics</h1>
+			    			Team Game Design Project
 			    			<br>
-			    			(Web and App Development)
+			    			Movement based board game
 			    		</div>
 			  		</div>
 				</a>
@@ -76,10 +77,10 @@
 					<img src="media/snowballinSQ.png" alt = "Snowballin' Screenshot" class="slideimage">
 			    	<div class="overlay">
 			    		<div class="text">
-			    			<h1>Smiles Per Hour</h1>
-			    			Large scale team project
+			    			<h1>Snowballin'</h1>
+			    			Casual Unity Game
 			    			<br>
-			    			(Web and App Development)
+			    			C# and Unity Development
 			    		</div>
 			  		</div>
 				</a>
@@ -92,10 +93,10 @@
 					<img src="media/poetry-launch.png" alt = "Magnetic poetry app Screenshot" class="slideimage">
 			    	<div class="overlay">
 			    		<div class="text">
-			    			<h1>Smiles Per Hour</h1>
-			    			Large scale team project
+			    			<h1>Fridge Poems</h1>
+			    			Team iOS Project
 			    			<br>
-			    			(Web and App Development)
+			    			Swift, XCode development
 			    		</div>
 			  		</div>
 				</a>
