--- a/projects/crashtacticspg.html
+++ b/projects/crashtacticspg.html
@@ -6,8 +6,9 @@
 	<link rel="stylesheet" type="text/css" href="../css/font-awesome/css/font-awesome.min.css">
 	<link rel="stylesheet" type="text/css" href="../css/homecss.css">
 	<link href='https://fonts.googleapis.com/css?family=Hind' rel='stylesheet' type='text/css'>
-	<script src="scripts/jquery.js"></script>
-	<script src = "scripts/myjs.js"></script>
+	<link rel="icon" href="../media/martinLogoSmall.png" type="image/gif" sizes="16x16">
+	<!--<script src="scripts/jquery.js"></script> -->
+	<!--<script src = "scripts/myjs.js"></script> -->
 </head>
 <body>
 	<div id = "intro">
@@ -15,7 +16,7 @@
 		<nav>
 			<a href="../home.html">Work</a>			
 			<a href="../about.html">About</a>
-			<a href="../media/Martin_ResumeV4.pdf" target = "_blank">Resume</a>
+			<a href="../media/Martin_ResumeV5.pdf" target = "_blank">Resume</a>
 		</nav>	
 	</div>
 
@@ -32,7 +33,6 @@
 			</ul>
 			<h3>Project Description</h3>
 			<p>Crash Tactics is a board game based on movement and resource management. The player gains speed(movement and damage) and mass(hitpoints) by orbiting the corresponding blue and red planets. They then ram into other players removing their mass until it hits 0.</p>
-			<h3>Contributions</h3>
 
 			<h3>Skills used/Lessons Learned</h3>
 			<ul>
