--- a/projects/smilespg.html
+++ b/projects/smilespg.html
@@ -6,8 +6,9 @@
 	<link rel="stylesheet" type="text/css" href="../css/font-awesome/css/font-awesome.min.css">
 	<link rel="stylesheet" type="text/css" href="../css/homecss.css">
 	<link href='https://fonts.googleapis.com/css?family=Hind' rel='stylesheet' type='text/css'>
-	<script src="scripts/jquery.js"></script>
-	<script src = "scripts/myjs.js"></script>
+	<link rel="icon" href="../media/martinLogoSmall.png" type="image/gif" sizes="16x16">
+	<!--<script src="scripts/jquery.js"></script> -->
+	<!--<script src = "scripts/myjs.js"></script> -->
 </head>
 <body>
 	<div id = "intro">
@@ -15,37 +16,37 @@
 		<nav>
 			<a href="../home.html">Work</a>			
 			<a href="../about.html">About</a>
-			<a href="../media/Martin_ResumeV4.pdf" target = "_blank">Resume</a>
+			<a href="../media/Martin_ResumeV5.pdf" target = "_blank">Resume</a>
 		</nav>	
 	</div>
 	<div class = "projectpage">
 		<div class = "imgcontainer">
-			<img class = "wideimg" src="../media/crashtactics.jpg" alt = "Crash Tactics Game Board">
+			<img class = "wideimg" src="../media/smilesPic.jpg" alt = "Imagine RIT Installation">
 		</div>	
 		<div class = "projectinfo">
 			<h1>Smiles Per Hour</h1>
 			<h3>Project Info</h3>
 			<ul>
 				<li>- Group Members: 6</li>
-				<li>- Status: In Progress</li>
+				<li>- Status: Completed</li>
 			</ul>
-			<h3>Project Description</h3>
-			<p>Poem Fridge is our take on a magnetic poetry app. It allows the user to create their own poetry using an interface similar to magnets on a fridge. There are a number of different word lists and fonts to choose from. The users can then screenshot and share their poems using the share button. They can also edit the background of the app using the load function.</p>
+			<h3>Smiles Per Hour</h3>
+			<p>Smiles Per Hour is a campus wide project that aims to find out what makes RIT happy. We installed kiosks in three locations to gather data from anyone willing to press one of the five buttons. We then used this data to create an interactive installation for users to explore what this data means.</p>
 			<h3>Contributions</h3>
 			<ul>
-				<li>- Full Website Development</li>
-				<li>- Interactive Processing Application(In Progress)</li>
+				<li>- Website Development</li>
+				<li>- Interactive Processing Application</li>
 				<li>- Kiosk Development</li>
 				<li>- Kiosk Location Management</li>
 			</ul>
 			<h3>Skills used/Lessons Learned</h3>
 			<ul>
 				<li>- Arduino Development</li>
-				<li>- Processing</li>
+				<li>- Processing(Installation app)</li>
 				<li>- HTML5/CSS</li>
-				<li>- Group collaboration</li>
+				<li>- Large Group collaboration</li>
 			</ul>
-			<a href="http://ritsmiles.com">Development Blog</a>
+			<a href="http://ritsmiles.com">Visit our Website</a>
 		</div>
 	<footer>
 		<span class = "spanentry">danmartindev@gmail.com</span>
