--- a/projects/snowballinpg.html
+++ b/projects/snowballinpg.html
@@ -6,8 +6,9 @@
 	<link rel="stylesheet" type="text/css" href="../css/font-awesome/css/font-awesome.min.css">
 	<link rel="stylesheet" type="text/css" href="../css/homecss.css">
 	<link href='https://fonts.googleapis.com/css?family=Hind' rel='stylesheet' type='text/css'>
-	<script src="scripts/jquery.js"></script>
-	<script src = "scripts/myjs.js"></script>
+	<link rel="icon" href="../media/martinLogoSmall.png" type="image/gif" sizes="16x16">
+	<!--<script src="scripts/jquery.js"></script> -->
+	<!--<script src = "scripts/myjs.js"></script> -->
 </head>
 <body>
 	<div id = "intro">
@@ -15,12 +16,12 @@
 		<nav>
 			<a href="../home.html">Work</a>			
 			<a href="../about.html">About</a>
-			<a href="../media/Martin_ResumeV4.pdf" target = "_blank">Resume</a>
+			<a href="../media/Martin_ResumeV5.pdf" target = "_blank">Resume</a>
 		</nav>	
 	</div>
 	<div class = "projectpage">
 		<div class = "imgcontainer">
-			<img class = "wideimg" src="../media/crashtactics.jpg" alt = "Crash Tactics Game Board">
+			<img class = "wideimg" src="../media/snowballin1.png" alt = "In game shot of Snowballin'">
 		</div>
 		<div class = "projectinfo">
 			<h1>Snowballin'</h1>
