--- a/projects/magnetspg.html
+++ b/projects/magnetspg.html
@@ -6,8 +6,9 @@
 	<link rel="stylesheet" type="text/css" href="../css/font-awesome/css/font-awesome.min.css">
 	<link rel="stylesheet" type="text/css" href="../css/homecss.css">
 	<link href='https://fonts.googleapis.com/css?family=Hind' rel='stylesheet' type='text/css'>
-	<script src="scripts/jquery.js"></script>
-	<script src = "scripts/myjs.js"></script>
+	<link rel="icon" href="../media/martinLogoSmall.png" type="image/gif" sizes="16x16">
+	<!--<script src="scripts/jquery.js"></script> -->
+	<!--<script src = "scripts/myjs.js"></script> -->
 </head>
 <body>
 	<div id = "intro">
@@ -15,16 +16,15 @@
 		<nav>
 			<a href="../home.html">Work</a>			
 			<a href="../about.html">About</a>
-			<a href="../media/Martin_ResumeV4.pdf" target = "_blank">Resume</a>
-		</nav>	
+			<a href="../media/Martin_ResumeV5.pdf" target = "_blank">Resume</a>
+		</nav>
 	</div>
 	<div class = "projectpage">
 		<div class = "imgcontainer">
-			<img class = "wideimg" src="../media/crashtactics.jpg" alt = "Crash Tactics Game Board">
-		</div>
+			<img class = "tallImg" src="../media/poetry-launch.png" alt = "Screenshot of active app">
 		</div>
 			<div class = "projectinfo">
-				<h1>Snowballin'</h1>
+				<h1>Poem Fridge</h1>
 				<h3>Project Info</h3>
 				<ul>
 					<li>- Group Members: 2</li>
