--- a/projects/pickerpg.html
+++ b/projects/pickerpg.html
@@ -6,8 +6,9 @@
 	<link rel="stylesheet" type="text/css" href="../css/font-awesome/css/font-awesome.min.css">
 	<link rel="stylesheet" type="text/css" href="../css/homecss.css">
 	<link href='https://fonts.googleapis.com/css?family=Hind' rel='stylesheet' type='text/css'>
-	<script src="scripts/jquery.js"></script>
-	<script src = "scripts/myjs.js"></script>
+	<link rel="icon" href="../media/martinLogoSmall.png" type="image/gif" sizes="16x16">
+	<!--<script src="scripts/jquery.js"></script> -->
+	<!--<script src = "scripts/myjs.js"></script> -->
 </head>
 <body>
 	<div id = "intro">
@@ -15,32 +16,27 @@
 		<nav>
 			<a href="../home.html">Work</a>			
 			<a href="../about.html">About</a>
-			<a href="../media/Martin_ResumeV4.pdf" target = "_blank">Resume</a>
+			<a href="../media/Martin_ResumeV5.pdf" target = "_blank">Resume</a>
 		</nav>	
 	</div>
 	<div class = "projectpage">
 		<div class = "imgcontainer">
-			<img class = "wideimg" src="../media/crashtactics.jpg" alt = "Crash Tactics Game Board">
+			<img class = "wideimg" src="../media/api.png" alt = "Screenshot of home page of web app">
 		</div>
 		</div>
 			<div class = "projectinfo">
 				<h1>PC Part Picker</h1>
 				<h3>Project Info</h3>
 				<ul>
-					<li>- Group Members: 2</li>
+					<li>- Solo Project</li>
 				</ul>
 				<h3>Project Description</h3>
-				<p>Poem Fridge is our take on a magnetic poetry app. It allows the user to create their own poetry using an interface similar to magnets on a fridge. There are a number of different word lists and fonts to choose from. The users can then screenshot and share their poems using the share button. They can also edit the background of the app using the load function.</p>
-				<h3>Contributions</h3>
-				<ul>
-					<li>- Text changing systems</li>
-					<li>- </li>
-				</ul>
+				<p>PC Part Picker is my attempt to make PC building simpler for beginner PC builders. It utilizes the Best Buy and Google Maps API's to locate the closest Best Buy location to buy the part the user chooses. It searches using a simple drop down menu to make sure the user doesn't miss out on any key parts.</p>
 				<h3>Skills used/Lessons Learned</h3>
 				<ul>
-					<li>- XCode</li>
-					<li>- Swift</li>
-					<li>- Team collaboration</li>
+					<li>- HTML Canvas</li>
+					<li>- JavaScript</li>
+					<li>- Google Maps/Best Buy API</li>
 				</ul>
 				<a href="https://github.com/bxc1712/PoemMagnets">Source Code</a>
 		</div>	
